# Parallel-Primer-Practices

./: .clangd  CMakeLists.txt  inc_cuda.cu  inc_cuda.h  inc_serial.cc  inc_serial.h  inc_test.cc
